# vmc

./: .gitmodules  CMakeLists.txt  compile_shaders.py
data/: blocks.json
data/shaders/: default.frag.spv  default.vert.spv
src/: CMakeLists.txt  main.cpp
src/common/: Image.cpp  Image.h  Log.cpp  Log.h  Utils.cpp  Utils.h
src/core/: Application.cpp  Application.h  GameView.cpp  GameView.h  View.cpp  View.h  Window.cpp  Window.h
src/rendering/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  MeshBuilder.cpp  MeshBuilder.h  RenderContext.cpp  RenderContext.h  RenderPass.cpp  RenderPass.h  RenderPipeline.cpp  RenderPipeline.h  TextureBundle.cpp  TextureBundle.h
src/shaders/: default.frag  default.vert
src/vk/: DescriptorPool.cpp  DescriptorPool.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  DynamicUniform.cpp  DynamicUniform.h  ShaderModule.cpp  ShaderModule.h  StagingManager.cpp  StagingManager.h  Swapchain.cpp  VulkanBuffer.cpp  VulkanBuffer.h  VulkanDevice.cpp  VulkanDevice.h  VulkanImage.cpp  VulkanImage.h  VulkanInstance.cpp  VulkanInstance.h  VulkanShaderModule.cpp  VulkanShaderModule.h  VulkanSwapchain.cpp  VulkanSwapchain.h
src/world/: Block.cpp  Block.h  Chunk.cpp  Chunk.h  PerlinNoise.cpp  PerlinNoise.h  TerrainGenerator.cpp  TerrainGenerator.h  World.cpp  World.h
